--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RipulDraft</title>
+  <title>RIPUL Draft</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
+  <div class="navbar">
+    <div class="navbar-inner">
+      <a class="brand" href="#">RIPUL Draft</a>
+      <ul class="nav">
+        <li><a href="teams">Teams</a></li>
+        <li><a href="players">Players</a></li>
+      </ul>
+    </div>
+  </div>
 </head>
 <body>
 
