--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,23 +1,12 @@
 <h1>Listing teams</h1>
 
-<table>
-  <tr>
-    <th>Color</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
 <% @teams.each do |team| %>
+<h3><%= team.color %></h3>
+<table class="table table-striped">
+  <% team.players.each do |player| %>
   <tr>
-    <td><%= team.color %></td>
-    <td><%= link_to 'Show', team %></td>
-    <td><%= link_to 'Edit', edit_team_path(team) %></td>
-    <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= player.name %></td>
   </tr>
-<% end %>
+  <% end %>
 </table>
-
-<br />
-
-<%= link_to 'New Team', new_team_path %>
+<% end %>
