add draft picks to navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
       <ul class="nav">
         <li><a href="teams">Teams</a></li>
         <li><a href="players">Players</a></li>
+        <li><a href="picks">Draft Picks</a></li>
       </ul>
     </div>
   </div>
