picks_controller: various fixes to get picks to display picks

--- a/app/views/picks/index.html.erb
+++ b/app/views/picks/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Draft Picks</h1>
 
-<%= @picks_by_gender.keys.each do |gender| %>
-<h3>gender</h3>
+<% @picks_by_gender.keys.each do |gender| %>
+<h3><%= gender %></h3>
 <table>
   <tr>
     <th>Number</th>
