picks.index: show team name

--- a/app/views/picks/index.html.erb
+++ b/app/views/picks/index.html.erb
@@ -13,7 +13,7 @@
   <tr>
     <td><%= pick.number %></td>
     <td><%= pick.player %></td>
-    <td><%= pick.team %></td>
+    <td><%= pick.team.color %></td>
     <td><%= pick.automatic %></td>
   </tr>
   <% end %>
