application css: offset all pages from the left

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,11 @@
 </head>
 <body>
 
-<%= yield %>
+  <div class="row">
+    <div class="span11 offset1">
+      <%= yield %>
+    </div>
+  </div>
 
 </body>
 </html>
