--- a/app/views/draft/index.html.erb
+++ b/app/views/draft/index.html.erb
@@ -2,7 +2,7 @@
 
 <h4><%= @information_string %></h4>
 
-<table>
+<table class="table table-striped">
   <tr>
     <th>Player</th>
     <th>Draft</th>
