--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,17 +5,23 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-
   <div class="navbar">
     <div class="navbar-inner">
       <a class="brand" href="#">RIPUL Draft</a>
       <ul class="nav">
+        <li><a href="players">Undrafted Players</a></li>
         <li><a href="teams">Teams</a></li>
-        <li><a href="players">Players</a></li>
         <li><a href="picks">Draft Picks</a></li>
       </ul>
     </div>
   </div>
+
+  <% flash.each do |name, msg| %>
+    <div class="alert-message info">
+      <%= content_tag :p, flash[name] %>
+    </div>
+  <% end %>
+
 </head>
 <body>
 
