--- a/app/views/draft/index.html.erb
+++ b/app/views/draft/index.html.erb
@@ -6,13 +6,17 @@
   <tr>
     <th>Player</th>
     <th>Age</th>
-    <th>Draft</th>
+    <% if @admin %>
+      <th>Draft</th>
+    <% end %>
   </tr>
   <% @players.each do |player| %>
   <tr>
     <td><%= player.name %></td>
     <td><%= player.age %></td>
-    <td><%= link_to 'Draft player', draft_path(:player => player) %></td>
+    <% if @admin %>
+      <td><%= link_to 'Draft player', draft_path(:player => player) %></td>
+    <% end %>
   </tr>
   <% end %>
 </table>
