application navbar: point to draft list instead of players list

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <div class="navbar-inner">
       <a class="brand" href="#">RIPUL Draft</a>
       <ul class="nav">
-        <li><a href="players">Undrafted Players</a></li>
+        <li><a href="draft">Undrafted Players</a></li>
         <li><a href="teams">Teams</a></li>
         <li><a href="picks">Draft Picks</a></li>
       </ul>
