--- a/app/views/picks/index.html.erb
+++ b/app/views/picks/index.html.erb
@@ -14,6 +14,9 @@
       <td><%= pick.number %></td>
       <td><%= pick.player.name %></td>
       <td><%= pick.team.color %></td>
+      <% if @admin %>
+        <td><%= link_to 'Destroy', pick, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <% end %>
     </tr>
     <% end %>
   </table>
