undo Picks with :update instead of :destroy

--- a/app/views/picks/index.html.erb
+++ b/app/views/picks/index.html.erb
@@ -19,7 +19,8 @@
       </td>
       <td><%= pick.team.color %></td>
       <% if @admin %>
-        <td><%= link_to 'Undo pick', pick, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit pick', edit_pick_path(pick) %></td>
+        <td><%= link_to 'Undo pick', pick, method: :put, data: { confirm: 'Are you sure?' } %></td>
       <% end %>
     </tr>
     <% end %>
