--- a/app/views/draft/index.html.erb
+++ b/app/views/draft/index.html.erb
@@ -3,6 +3,25 @@
 <h4><%= @information_string %></h4>
 
 <div class="span6">
+<% if @admin %>
+  <div class="field">
+    <table class="table table-striped table-bordered">
+      <tr>
+        <td>
+          Next draft pick number
+        </td>
+        <td>
+          <%= number_field_tag "next_draft_pick", "asdf" %>
+        </td>
+        <td>
+          <div class="actions">
+            <%= submit_tag "Submit" %>
+          </div>
+        </td>
+      </tr>
+    </table>
+  </div>
+<% end %>
 <table class="table table-striped">
   <tr>
     <th>Player</th>
